--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <div>
             <h1>Всем привет</h1>
-            <p>Я занимаюсь Front-and разработкой <br> использую такой стек тихнологий: <br> <b> HTML, CSS, JavaScript, Git</b>
+            <p>Я занимаюсь Front-end разработкой <br> использую такой стек тихнологий: <br> <b> HTML, CSS, JavaScript, Git</b>
             </p>
         </div>
     </main>
